# HelloQtAndroid

./: .gitignore  CMakeLists.txt  HelloQtAndroid.pro  README.md  USBManager.cpp  main.cpp  main.qml
3rd/libuvc/include/libusb/: libusb_uvc.h
3rd/libuvc/include/libuvc/: libuvc.h  libuvc_config.h  libuvc_internal.h  libuvc_internal_original.h  libuvc_original.h
android/: AndroidManifest.xml  build.gradle
android/java/: MainActivity.java  MyApplication.java  USBMonitor.java
app/: ActivityManager.cpp  ActivityManager.h  AndroidTool.cpp  CMakeLists.txt  FileTool.cpp  FileTool.h  USBManager.cpp  USBManager.h  app.pro  main.cpp  main.qml
app/Declarative/: CameraFilter.cpp  CameraFilter.h  CameraProbe.cpp  CameraProbe.h  Declarative.pri  DeclarativeRegister.h  VideoItem.cpp  VideoItem.h
app/Platform/android/: AndroidManifest.xml  build.gradle
app/Platform/android/java/: AndroidTool.java  MainActivity.java  MyApplication.java  USBMonitor.java
app/QML/: main.qml  qml.qrc
app/QML/Page/: CameraPage.qml  FilePage.qml  JNIPage.qml  PopupPage.qml  USBPage.qml
app/Tools/: ActivityManager.cpp  ActivityManager.h  AndroidTool.cpp  AndroidTool.h  AppTool.cpp  AppTool.h  FileTool.cpp  FileTool.h  Tools.pri  ToolsRegister.h  USBManager.cpp  USBManager.h
app/android/: AndroidManifest.xml
app/android/java/: MainActivity.java  MyApplication.java  USBMonitor.java
